--- a/index.html
+++ b/index.html
@@ -15,8 +15,16 @@
     <link href="https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="app">
-        main.
+    <div id="app">
+        <main class="main-container">
+         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe, nisi reiciendis temporibus id accusamus nulla deserunt ipsa, corrupti itaque iure perferendis, minima odio hic unde aliquid. Quo quis commodi rem.
+        </main>
+
+        <aside class="aside-container">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis delectus reprehenderit perspiciatis nulla ipsum laudantium voluptatibus dolorum perferendis totam ab, dolor nobis similique tempora quibusdam eum excepturi minus commodi quod.
+        </aside>
     </div>
+
+    
 </body>
 </html>
