--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 
-    
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
@@ -10,21 +11,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fomormulário de Matricula</title>
 
-    <link rel="stylesheet" href="style/index.css"> 
+    <link rel="stylesheet" href="style/index.css">
 
-    <link href="https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&family=Poppins:wght@400;700&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
     <div id="app">
-        <main class="main-container">
-         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe, nisi reiciendis temporibus id accusamus nulla deserunt ipsa, corrupti itaque iure perferendis, minima odio hic unde aliquid. Quo quis commodi rem.
+        <main>
+
+            <div class="main-container">
+                <div class="back">
+                    <img src="assets/icons/arrow-left-02.svg" alt="Volta">
+                    <span>Volta</span>
+                </div>
+                    <h1>Formulário de matrícula</h1>
+                    <p>Preencha os dados abaixo para matricular seu filho na escola de educação infantil Estrelas do
+                        Amanhã.</p>
+            </div>
+
         </main>
 
-        <aside class="aside-container">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis delectus reprehenderit perspiciatis nulla ipsum laudantium voluptatibus dolorum perferendis totam ab, dolor nobis similique tempora quibusdam eum excepturi minus commodi quod.
+        <aside>
+            <div class="aside container">
+                <header>
+                    <img src="assets/logo.svg" alt="">
+                    <h2>Porque cada momento de <span>aprendizado</span> conta</h2>
+                    <p>Inscreva seu filho em nossa escola e veja-o florescer em um ambiente acolhedor, seguro e
+                        estimulante.</p>
+                </header>
+            </div>
+
+            <img src="assets/Illustration.svg" alt="Ilustração  de uma professoar com crianças">
         </aside>
     </div>
-
-    
 </body>
+
 </html>
