--- a/index.html
+++ b/index.html
@@ -27,9 +27,52 @@
                     <img src="assets/icons/arrow-left-02.svg" alt="Volta">
                     <span>Volta</span>
                 </div>
-                    <h1>Formulário de matrícula</h1>
-                    <p>Preencha os dados abaixo para matricular seu filho na escola de educação infantil Estrelas do
-                        Amanhã.</p>
+                <h1>Formulário de matrícula</h1>
+                <p>Preencha os dados abaixo para matricular seu filho na escola de educação infantil Estrelas do
+                    Amanhã.</p>
+
+                <form action="#" method="post" enctype="multipart/form-data">
+
+                    <fieldset class="child-info">
+                        <legend>Informações da criança</legend>
+
+                        <div class="input-wrapper">
+                            <label for="fullname">Nome completo</label>
+                            <input type="text" name="fullname" id="fullname" placeholder="Nome da criança">
+                        </div>
+
+                        <div class="input-wrapper">
+                            <label for="birthdate">Data de nascimento</label>
+                            <input type="date" id="birthdate" name="birthdate" lang="pt-BR">
+                        </div>
+
+                        <div class="selection-wrapper">
+                            <label for="gender">Sexo</label>
+                            <select name="gender" id="gender">
+                                <option value="Faale">Feminino</option>
+                                <option value="Male">Masculino</option>
+                                <option value="na">Prefiro não dizer</option>
+                            </select>
+                        </div>
+
+                        <div class="textarea-wraper">
+                            <label for="madical-info">Informações Médicas</label>
+                            <textarea name="madical-info" id="madical-info" cols="30" rows="10"
+                                placeholder="A criança possue alguma condição médica que a escola deve estar ciente? (Se sim, especifique)">
+                            </textarea>
+                        </div>
+
+                        <div class="droparea-wrapper">
+                            <input type="file" id="birth-file" name="birth-file">
+                            <img src="assets/icons/cloud-upload.svg" alt="">
+                            <p>
+                                Clique aqui para <br>
+                                 selecionar os arquivos
+                            </p>
+                        </div>
+
+                    </fieldset>
+                </form>
             </div>
 
         </main>
