Configurando inputs de data select

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         </div>
 
                         <div class="input-wrapper">
-                            <label for="birthdate">Data de nascimento</label>
+                            <label for="birthdate">Data de Nascimento</label>
                             <input type="date" id="birthdate" name="birthdate" lang="pt-BR">
                         </div>
 
