--- a/index.html
+++ b/index.html
@@ -155,6 +155,26 @@
 
                     </fieldset>
 
+                    <fieldset class="enroll-options">
+                        <legend>Selecione o turno de estudo</legend>
+
+                        <div class="radio-wrapper">
+                            <div class="radio-inner">
+                                <div class="radio-image"></div>
+                                    <input type="radio" name="study-shift" value="morning" id="morning">
+                                    <img src="assets/icons/sun-cloud-02.svg" alt="ícone manhã">
+                                    <label for="Manhã">Manhã</label>
+                            </div>
+
+                            <div class="radio-inner">
+                                <div class="radio-image"></div>
+                                    <input type="radio" name="study-shift" value="evening" id="evening">
+                                    <img src="assets/icons/sun-02.svg" alt="ícone sol">
+                                    <label for="evening">Trade</label>
+                            </div>
+                        </div>
+
+                    </fieldset>
                 </form>
             </div>
 
