Customizando inputs do tipo radio

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                     </fieldset>
 
                     <fieldset class="enroll-options">
-                        <legend>Selecione o turno de estudo</legend>
+                        <label>Selecione o turno de estudo</label>
 
                         <div class="radio-wrapper">
                             <div class="radio-inner">
