--- a/index.html
+++ b/index.html
@@ -223,6 +223,14 @@
                             </div>
                         </div>
 
+                        <div class="terms-wrapper input-wrapper checkbox-wrapper">
+                            <div class="checkbox-image"></div>
+                            <input type="checkbox" name="terms" id="terms">
+                            <label for="">Declaro que li e concordo com os <strong>Termos e Condições</strong> e com a <strong>
+                                Política de
+                                    Privacidade
+                            </strong> da escola Estrela do Amanhã. </label>
+                        </div>
                     </fieldset>
                 </form>
             </div>
