--- a/index.html
+++ b/index.html
@@ -222,23 +222,38 @@
                                 </div>
                             </div>
                         </div>
-
-                        <div class="terms-wrapper input-wrapper checkbox-wrapper">
-                            <div class="checkbox-image"></div>
-                            <input type="checkbox" name="terms" id="terms">
-                            <label for="">Declaro que li e concordo com os <strong>Termos e Condições</strong> e com a <strong>
-                                Política de
-                                    Privacidade
-                            </strong> da escola Estrela do Amanhã. </label>
-                        </div>
                     </fieldset>
+
+                    <div class="terms-wrapper input-wrapper checkbox-wrapper">
+                        <div class="checkbox-image"></div>
+                        <input type="checkbox" name="terms" id="terms">
+                        <label for="">Declaro que li e concordo com os 
+                            <strong>Termos e Condições</strong> e com a
+                            <strong>
+                                Política de
+                                Privacidade
+                            </strong> da escola Estrela do Amanhã. </label>
+                    </div>
+
+
+                    <div class="action-wrapper">
+                        <button class="btn-secundary" type="button">
+                            Salvar respostas
+                        </button>
+
+                        <button class="btn-primary" type="submit">
+                            Fazer matrícula
+                        </button>
+                    </div>
+
+
                 </form>
             </div>
 
         </main>
 
         <aside>
-            <div class="aside container">
+            <div class="aside-container">
                 <header>
                     <img src="assets/logo.svg" alt="">
                     <h2>Porque cada momento de <span>aprendizado</span> conta</h2>
